# spacepromise

./: .gitignore  README.md  SpacePromise.sln.DotSettings
Assets/Materials/Sky/: SkyboxMaterial.mat
Assets/Resources/Prefabs/: MeshRendererPrefab.prefab
Assets/Scenes/: DevelopmentScene.unity  PlanetScene.unity  TerrainScene.unity
Assets/Scripts/: Ground.cs  GroundChunk.cs  GroundSurface.cs  GroundSurfaceMeshRenderer.cs  IPlaneMeshPool.cs  MeshData.cs  PlaneMeshFactory.cs  PlaneMeshPool.cs  Sun.cs  UnityExtensions.cs
Assets/Scripts/Astronomical/: AstronomicalObject.cs  AstronomicalObjectFace.cs  AstronomicalObjectLodDebugger.cs  AstronomicalObjectSurface.cs  ViewerData.cs  ViewerDataProvider.cs
Assets/Scripts/Planets/: PlanetFace.cs  PlanetObject.cs
Assets/Scripts/Terrain/: HeightMapDisplay.cs  HeightMapGenerator.cs  TextureHelper.cs
Assets/Scripts/Utils/: Class1.cs  QuadTreeNode.cs
Logs/IncrementalCompiler/: Assembly-CSharp.rsp  Unity.Burst.rsp  Unity.Entities.Editor.rsp  Unity.Entities.Properties.rsp  Unity.Mathematics.rsp  Unity.PackageManagerUI.Editor.rsp  Unity.Properties.Editor.rsp  Unity.Rendering.Hybrid.rsp  Unity.TextMeshPro.Editor.rsp  Unity.Transforms.Hybrid.rsp  Unity.Transforms2D.rsp  UnityEditor.StandardEvents.rsp
Luna/: .gitignore  CMakeLists.txt  main.cpp
Luna/Vulkan/: VulkanInstance.cpp  VulkanInstance.h
ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
server/sp.server.node/: Dockerfile  NuGet.Config  README.md  sp.server.node.sln  sp.server.node.sln.DotSettings
unity/SpacePromise/: .gitignore
(+131 files in other folders)
